libvlcsharp/include/libvlcpp/vlc/libvlc_media_player.h


typedef struct libvlc_media_player_t libvlc_media_player_t;
typedef struct libvlc_track_description_t
{
    int   i_id;
    char *psz_name;
    struct libvlc_track_description_t *p_next;
} libvlc_track_description_t;
typedef struct libvlc_title_description_t
{
    int64_t i_duration; 
    char *psz_name; 
    unsigned i_flags; 
} libvlc_title_description_t;
typedef struct libvlc_chapter_description_t
{
    int64_t i_time_offset; 
    int64_t i_duration; 
    char *psz_name; 
} libvlc_chapter_description_t;
typedef enum libvlc_position_t {
    libvlc_position_disable=-1,
    libvlc_position_center,
    libvlc_position_left,
    libvlc_position_right,
    libvlc_position_top,
    libvlc_position_top_left,
    libvlc_position_top_right,
    libvlc_position_bottom,
    libvlc_position_bottom_left,
    libvlc_position_bottom_right
} libvlc_position_t;
LIBVLC_API unsigned libvlc_media_player_has_vout( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_media_player_is_seekable( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_media_player_can_pause( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_media_player_program_scrambled( libvlc_media_player_t *p_mi );
LIBVLC_API void libvlc_media_player_next_frame( libvlc_media_player_t *p_mi );
LIBVLC_API void libvlc_media_player_navigate( libvlc_media_player_t* p_mi,
                                              unsigned navigate );
LIBVLC_API void libvlc_media_player_set_video_title_display( libvlc_media_player_t *p_mi, libvlc_position_t position, unsigned int timeout );
LIBVLC_API
int libvlc_media_player_add_slave( libvlc_media_player_t *p_mi,
                                   libvlc_media_slave_type_t i_type,
                                   const char *psz_uri, bool b_select );
LIBVLC_API void libvlc_track_description_list_release( libvlc_track_description_t *p_track_description );
LIBVLC_API void libvlc_toggle_fullscreen( libvlc_media_player_t *p_mi );
LIBVLC_API void libvlc_set_fullscreen( libvlc_media_player_t *p_mi, int b_fullscreen );
LIBVLC_API int libvlc_get_fullscreen( libvlc_media_player_t *p_mi );
LIBVLC_API
void libvlc_video_set_key_input( libvlc_media_player_t *p_mi, unsigned on );
LIBVLC_API
void libvlc_video_set_mouse_input( libvlc_media_player_t *p_mi, unsigned on );
LIBVLC_API
int libvlc_video_get_size( libvlc_media_player_t *p_mi, unsigned num,
                           unsigned *px, unsigned *py );
LIBVLC_API
int libvlc_video_get_cursor( libvlc_media_player_t *p_mi, unsigned num,
                             int *px, int *py );
LIBVLC_API float libvlc_video_get_scale( libvlc_media_player_t *p_mi );
LIBVLC_API void libvlc_video_set_scale( libvlc_media_player_t *p_mi, float f_factor );
LIBVLC_API char *libvlc_video_get_aspect_ratio( libvlc_media_player_t *p_mi );
LIBVLC_API void libvlc_video_set_aspect_ratio( libvlc_media_player_t *p_mi, const char *psz_aspect );
LIBVLC_API libvlc_video_viewpoint_t *libvlc_video_new_viewpoint(void);
LIBVLC_API int libvlc_video_update_viewpoint( libvlc_media_player_t *p_mi,
                                              const libvlc_video_viewpoint_t *p_viewpoint,
                                              bool b_absolute);
LIBVLC_API int libvlc_video_get_spu( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_video_get_spu_count( libvlc_media_player_t *p_mi );
LIBVLC_API libvlc_track_description_t *
        libvlc_video_get_spu_description( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_video_set_spu( libvlc_media_player_t *p_mi, int i_spu );
LIBVLC_API int64_t libvlc_video_get_spu_delay( libvlc_media_player_t *p_mi );
LIBVLC_API int libvlc_video_set_spu_delay( libvlc_media_player_t *p_mi, int64_t i_delay );
LIBVLC_API int libvlc_media_player_get_full_title_descriptions( libvlc_media_player_t *p_mi,
                                                                libvlc_title_description_t ***titles );
LIBVLC_API
    void libvlc_title_descriptions_release( libvlc_title_description_t **p_titles,
                                            unsigned i_count );
LIBVLC_API int libvlc_media_player_get_full_chapter_descriptions( libvlc_media_player_t *p_mi,
                                                                  int i_chapters_of_title,
                                                                  libvlc_chapter_description_t *** pp_chapters );
LIBVLC_API
void libvlc_chapter_descriptions_release( libvlc_chapter_description_t **p_chapters,
                                          unsigned i_count );
LIBVLC_API char *libvlc_video_get_crop_geometry( libvlc_media_player_t *p_mi );
LIBVLC_API
void libvlc_video_set_crop_geometry( libvlc_media_player_t *p_mi, const char *psz_geometry );
LIBVLC_API int libvlc_video_get_teletext( libvlc_media_player_t *p_mi );